# breakage-population-balance

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
breakage_population_balance/: SimpleBreakageODE.pyx  __init__.py  arrayCythFuncs.pyx  arrayManipulation.py  array_manipulation.py  breakageODE.pyx  cythonImports.py  exampleIC.py  models.py  npconfig.pxd  solverClasses.py
breakage_population_balance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/simple_breakage/: SimpleBreakageODE.pyx
test/: plotting.py  test.py  test_1D_particle_breakup.py  test_2D_particle_breakup.py  test_fraction.py  test_number.py
test/PSD_fitting_example/: Extract-11500.csv  Extract-1500.csv  Extract-18500.csv  Extract-3800.csv  Extract-6500.csv  Extract_UVvis.py  test_fitting.py  test_fitting_UVvis.py  test_surface.py
