[build-system]
requires = [
    "setuptools>=61.0",
    "Cython>=0.29.32,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = "breakage_population_balance"
version = "0.0.1"
authors = [
  { name="Diego T. Perez-Alvarez", email="diego.tomohisa@gmail.com" },
]
description = "A package for solving simple breakage population balance equation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

#[project.urls]
#"Homepage" = ""
